--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,6 @@
+<div class="page-header">
 <h1><%= @game.name %></h1>
+</div>
 <div class="panel panel-default">
   <div class="panel-body">
    <%= @game.description %>
@@ -38,25 +40,16 @@
     
 </table>
 
-<table class="table">
-<thead>
-    <tr>
-    
-    <th>Użytkownik</th>
-    <th>Recenzja</th>
-    
-    </tr>
-  </thead>
 
    
-      <tr>
       
-       <% @game.ratings.each do |rating| %>
-        <td><%= User.find(rating.user_id).email %></td>
-        <td><%= rating.review %></td>
+      <% @game.ratings.each do |rating| %>
+      <div class="list-group">
+        <h4 class="list-group-item-heading"><%= rating.review %></h4>
+          <p class="list-group-item-text">Użytkownik: <%= User.find(rating.user_id).email %></p>
+ 
+            </div>
         <% end %>
-        
-      </tr>
-    
-</table>
 
+<div>Dodaj własną recenzję </div>
+<%= render "ratings/form"%>
