add points to games on index page

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -24,7 +24,12 @@
         <td><%= game.minage %></td>
         <td><%= game.ratings.average(:points) %></td> 
         <% if user_signed_in? %>
-        <td><%= "tu będzie rating" %></td>
+        <td><%= simple_form_for(@review) do |f| %>
+        <%= f.input :points, label: false, placeholder: "ocena", collection: 1..10 %>
+        <%= f.hidden_field :user_id, :value => current_user.id %>
+        <%= f.hidden_field :game_id, :value => game.id %>
+       <span> <%= f.submit "oceń "%> </span>
+        <% end %></td>
         <td><%= "tu będzie dodawanie recenzji" %></td>
         <% end %> 
       </tr>
