--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <p class="navbar-text pull-left ">
-    <STRONG>WIELORĘCZNI</STRONG>
+    <STRONG><%= link_to "WIELORĘCZNI", games_path %></STRONG>
   </p>
   <p class="navbar-text pull-right">
 <% if user_signed_in? %>
