add name to device

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= game.ratings.average(:points) %></td> 
         <% if user_signed_in? %>
         <td><%= simple_form_for(@review) do |f| %>
-        <%= f.input :points, label: false, placeholder: "ocena", collection: 1..10 %>
+        <%= f.input :points, label: false, collection: 1..10 %>
         <%= f.hidden_field :user_id, :value => current_user.id %>
         <%= f.hidden_field :game_id, :value => game.id %>
        <span> <%= f.submit "oceń "%> </span>
