--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,8 +2,11 @@
 @import "bootstrap";
 
 body {
-  background-color: #053A59;
-  font-family: 'Oswald', sans-serif; 
+  background-color: #1D3440;
+  font-family: 'Lato', sans-serif; 
+}
+.select .optional
+{ width: 48px;
 }
 
 .panel .panel-footer {
