Fix displaying username

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -56,7 +56,7 @@
   <div class="panel-body">
     <%= rating.review %>
   </div>
-  <div class="panel-footer">Użytkownik: <%= User.find(rating.user_id).email %></div>
+  <div class="panel-footer">Użytkownik: <%= User.find(rating.user_id).username %></div>
 </div> 
       
         <% end %>
