add game to shelf

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,9 +6,13 @@ body {
   font-family: 'Lato', sans-serif; 
 }
 .select .optional
-{ width: 48px;
+{ width: 55px;
 }
 
 .panel .panel-footer {
   font-size: 11px;
+}
+.btn-primary
+{background-color: #84C1C6;
+  border-color: white;
 }
