--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -10,6 +10,7 @@
     <% if user_signed_in? %>
         <th><%= "Oceń grę" %></th>
         <th><%= "Dodaj recenzję" %></th>
+        <th><%= "Dodaj do swojej półki" %></th>
         <% end %>
 
     </tr>
@@ -26,11 +27,13 @@
         <% if user_signed_in? %>
         <td><%= simple_form_for(@review) do |f| %>
         <%= f.input :points, label: false, collection: 1..10 %>
+
         <%= f.hidden_field :user_id, :value => current_user.id %>
         <%= f.hidden_field :game_id, :value => game.id %>
-       <span> <%= f.submit "oceń "%> </span>
+        <%= f.submit "oceń ",  :class => 'btn btn-primary' %> 
         <% end %></td>
-        <td><%= "tu będzie dodawanie recenzji" %></td>
+        <td><button type="button" class="btn btn-primary review">Dodaj recenzję</button></td>
+        <td><%= button_to 'add to shelf', add_game_path(game), method: :post,class: "btn btn-primary" %></td>
         <% end %> 
       </tr>
     <% end %>
