--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,17 +2,16 @@
 @import "bootstrap";
 
 body {
-  background-color: #1D3440;
+  background-color: #051626;
   font-family: 'Lato', sans-serif; 
 }
 .select .optional
-{ width: 55px;
+{ width: 56px;
 }
 
 .panel .panel-footer {
   font-size: 11px;
 }
-.btn-primary
-{background-color: #84C1C6;
-  border-color: white;
+a {
+  color: #023B42;
 }
