--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,6 +3,9 @@
     <p class="navbar-text pull-left ">
     <STRONG><%= link_to "WIELORĘCZNI", games_path %></STRONG>
   </p>
+  <p class="navbar-text pull-left ">
+    <STRONG><%= link_to "użytkownicy", user_shows_path %></STRONG>
+  </p>
   <p class="navbar-text pull-right">
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.username %></strong>.
