--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: #051626;
-  font-family: 'Lato', sans-serif; 
+  font-family: 'Ubuntu', sans-serif; 
 }
 .select .optional
 { width: 56px;
