--- a/app/views/user_shows/show.html.erb
+++ b/app/views/user_shows/show.html.erb
@@ -1,7 +1,7 @@
 <div>
 <h2>Nazwa użytkownika: <%= @user.username %></h2>
 </div>
-
+<br>
 <table class="table table-hover">
 <thead>
     <tr>
@@ -19,7 +19,7 @@
       <tr>
       
        
-        <td><%= game.name %></td>
+        <td><%= link_to "#{game.name}", game %></td>
         <td><%= game.genre %></td>
         <% if Rating.where(game_id: game.id, user_id: @user.id).last %>
        <td> <%= Rating.where(game_id: game.id, user_id: @user.id).last.points %> 
