--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -33,12 +33,17 @@
         <td><%= @game.minage %></td>
         <td><%= @game.ratings.average(:points) %></td> 
         <% if user_signed_in? %>
-        <td><%= simple_form_for(@review) do |f| %>
-        <%= f.input :points, label: false, collection: 1..10 %>
-        <%= f.hidden_field :user_id, :value => current_user.id %>
-        <%= f.hidden_field :game_id, :value => @game.id %>
-       <span> <%= f.submit "oceń "%> </span>
-        <% end %></td>
+        <% if @existingreview.points.nil? %>
+        <td><%= simple_form_for(@existingreview) do |f| %>
+         <%= f.hidden_field :user_id, :value => current_user.id %>
+        <%= f.hidden_field :game_id, :value => @game.id %>        
+        <%= f.input :points, label: false, collection: 1..10 %>      
+         <%= f.submit "oceń "%> 
+       <% end %>
+       <% else %>
+      <td> <%= "Oceniłeś grę na #{@existingreview.points} punktów"%></td>
+         <% end %>
+          </td>
         <td><%= "tu będzie dodawanie recenzji" %></td>
         <% end %> 
       </tr>
@@ -64,3 +69,4 @@
 
 <div><h2>Dodaj własną recenzję </h2></div>
 <%= render "ratings/form"%>
+
