--- a/app/views/user_shows/show.html.erb
+++ b/app/views/user_shows/show.html.erb
@@ -21,7 +21,7 @@
        
         <td><%= link_to "#{game.name}", game %></td>
         <td><%= game.genre %></td>
-        <% if Rating.where(game_id: game.id, user_id: @user.id).last %>
+        <% if Rating.where(game: game, user: @user).last %>
        <td> <%= Rating.where(game_id: game.id, user_id: @user.id).last.points %> 
       
         </td>
