--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <p class="navbar-text pull-left ">
-    <STRONG><%= link_to "WIELORĘCZNI", games_path %></STRONG>
+    <STRONG><%= link_to "WIELORĘCZNI - main page", games_path %></STRONG>
   </p>
   <p class="navbar-text pull-left ">
-    <STRONG><%= link_to "użytkownicy", user_shows_path %></STRONG>
+    <STRONG><%= link_to "Users", user_shows_path %></STRONG>
   </p>
   <p class="navbar-text pull-right">
 <% if user_signed_in? %>
