--- a/app/views/user_shows/index.html.erb
+++ b/app/views/user_shows/index.html.erb
@@ -1,8 +1,8 @@
 <table class="table table-hover">
    <thead>
     <tr>
-    <th>Użytkownik</th>
-    <th>Liczba gier</th>
+    <th>User</th>
+    <th>Number of games</th>
     
 
     </tr>
@@ -11,7 +11,7 @@
    <% @users.each do |user| %>
       <tr>
          <td><%= link_to "#{user.username}", user_show_path(user)  %></td>
-          <td><%= "Liczba gier" %></td>
+          <td><%= user.games.count %></td>
         
       </tr>
     <% end %>
