--- a/app/views/user_shows/show.html.erb
+++ b/app/views/user_shows/show.html.erb
@@ -1,24 +1,22 @@
 <div>
-<h2>Nazwa użytkownika: <%= @user.username %></h2>
+<h2>Username: <%= @user.username %></h2>
 </div>
 <br>
 <table class="table table-hover">
 <thead>
     <tr>
     
-    <th>Nazwa gry</th>
-    <th>Rodzaj gry</th>
-    <th>Ocena</th>
+    <th>Game</th>
+    <th>Genre</th>
+    <th>Rating</th>
     <% if @user==current_user %>
-    <th>Usuń z półki</th> <% end %>
+    <th>Delete</th> <% end %>
       </tr>
        </tr>
   </thead>
 
    <% @user.games.each do |game| %>
-      <tr>
-      
-       
+      <tr>   
         <td><%= link_to "#{game.name}", game %></td>
         <td><%= game.genre %></td>
         <% if Rating.where(game: game, user: @user).last %>
@@ -27,7 +25,7 @@
         </td>
         <%else%>
         <td>
-        <%= "Jeszcze nie oceniona"%>
+        <%= "Game not yet rated by User"%>
         <% end %>
         <% if @user==current_user %>
         <td><%= button_to 'remove', removegame_user_show_path(:type=> game), method: :post, class: "btn btn-default" %></td> <% end %>
